Ready to kill other page
Ready to kill other page

--- a/left.html
+++ b/left.html
@@ -41,21 +41,21 @@
 <TD><LI>Ali in <A href="AlisonDiary2016Metter.html" target=_top>Metter</A>.<br>
 Ali in <A href="AlisonDiary2016.html" target=_top>St. Joe's</A>.
 </td></TR>
-
+-->
 <TR>
  <TD><LI>
  <A href="Bridge/bridgeindex.html" target=_top>Boro Pairs</A>
           </LI>
       </TD>
 </TR>
--->
+<!--
 <TR>
  <TD><LI>
- <A href="Bridge/newbridgeindex.html" target=_top>New page</A>
+ <A href="Bridge/newbridgeindex.html" target=_top>Boro Pairs</A>
           </LI>
       </TD>
 </TR>
-
+-->
 <tr>
 <TR>
 <TD><LI><A href="https://connect.secure.wellsfargo.com/" target=_top>Check Book</A>
@@ -78,12 +78,12 @@ target=_top>GA Power</A>
 </td>
 </TR>
 
-
+<!--
  <TR>
 <TD><LI><A href="flex/index.html" target=_top>Flexagon</A>
 </td>
 </TR>
-
+-->
 <TR>
 <TD><LI><A href="racquetball/RAQindex.html" target=_top>Racquetball</A>
 </td>
@@ -118,12 +118,12 @@ target=_top>GA Power</A>
           </LI>
       </TD>
 </TR>
-
+<!--
 <tr><TD>
       <LI>
       <A href="Blank_U.xlsx" target=_top>Sudoku</A>
 </LI></TD></TR>
-
+-->
 <TR>
  <TD><LI>
  <A href="https://www.watchtveverywhere.com/index.php" target=_top>Watch TV</A>
@@ -131,7 +131,7 @@ target=_top>GA Power</A>
       </TD>
 </TR>
 
-
+<!--
 
 <TR>
  <TD><LI>
@@ -139,7 +139,7 @@ target=_top>GA Power</A>
           </LI>
       </TD>
 </TR>
-
+-->
 
   <TR>
     <TD>
@@ -201,6 +201,6 @@ target=_top>ADP Cobra</a></li>
 
 </TBODY>
 </TABLE>
-
+updated 4/22/2020
 </BODY>
 </HTML>
