--- a/right.html
+++ b/right.html
@@ -1,23 +1,23 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3c.org/TR/1999/REC-html401-19991224/loose.dtd">
 <HTML>
-<!--------------------------------------------->
-<!--This page is an unofficial page of GSU >
-<!--URL of Page:     https://googledrive.com/host/0B9lRSLt4l1XpX3I1bEZJQWhCUmc/right.html>
-<!--Department:      Mathematical Sciences>
-<!--The PageMaster:  Bruce McLean  BMcLean@GeorgiaSouthern.edu>
-<!--Author:          Bruce McLean>
-<!--Date Created:    January 8, 2014 >
-<!--Moved from math.georgiasouthern.edu/~bmclean>
-<!--Last Modified: 11-9-2015>
-<!-------------Moved from-------------------------------->
-<!--This page is an unofficial page of GSU >
-<!--URL of Page:     http://math.georgiasouthern.edu/~bmclean/>
-<!--Department:      Mathematical Sciences>
-<!--The PageMaster:  Bruce McLean  BMcLean@GeorgiaSouthern.edu>
-<!--Author:          Bruce McLean>
-<!--Date Created:    September 4, 1997 >
-<!--Moved from www.cs.georgiasouthern.edu on 8-13-2006>
-<!--Last Modified: 4-22-20>
+<!___________________________________________________>
+<!-_-This page is an unofficial page of GSU >
+<!-_-URL of Page:     https://googledrive.com/host/0B9lRSLt4l1XpX3I1bEZJQWhCUmc/right.html>
+<!-_-Department:      Mathematical Sciences>
+<!-_-The PageMaster:  Bruce McLean  BMcLean@GeorgiaSouthern.edu>
+<!-_-Author:          Bruce McLean>
+<!-_-Date Created:    January 8, 2014 >
+<!-_-Moved from math.georgiasouthern.edu/~bmclean>
+<!-_-Last Modified: 11-9-2015>
+<!__________________Moved from___________________________________>
+<!-_-This page is an unofficial page of GSU >
+<!-_-URL of Page:     http://math.georgiasouthern.edu/~bmclean/>
+<!-_-Department:      Mathematical Sciences>
+<!-_-The PageMaster:  Bruce McLean  BMcLean@GeorgiaSouthern.edu>
+<!-_-Author:          Bruce McLean>
+<!-_-Date Created:    September 4, 1997 >
+<!-_-Moved from www.cs.georgiasouthern.edu on 8-13-2006>
+<!-_-Last Modified: 4-22-20>
 <HEAD>
 <TITLE>Dr. Bruce McLean's Home Page</TITLE>
 
@@ -33,26 +33,28 @@ mathematician Georgia Southern Statesboro mathematics math computer science stat
 <P><font size=4>
 
 <TABLE>
+
   <TBODY>
      <TR>
      <TD>
-        <TABLE>
-        <TBODY>
-        <TR>
-          <TD><FONT size=5>     <IMG alt=B src="gifs/B.gif">ruce
-            </FONT></TD>
-          <TD><FONT size=5><IMG title="" alt=McL
-            src="gifs/McL.gif">ean </FONT></TD>
+                        <TABLE>
+                          <TBODY>
+                           <TR>
+                          <TD><FONT size=5>     <IMG alt=B src="gifs/B.gif">ruce
+                      </FONT></TD>
+                   <TD><FONT size=5><IMG title="" alt=McL
+                               src="gifs/McL.gif">ean </FONT></TD>
 
-         <td><img src="gifs/uk-math.gif"></td><td><img src="Bridge/pics/No_Trump.jpg"></td>
-         </TR>
-         </TBODY>
-         </TABLE>
+                          <td><img src="gifs/uk-math.gif"></td>
+                             <td>
+<!-- <img src="Bridge/pics/No_Trump.jpg">
+-->
+                             </td>
+                         </TR>
+                  </TBODY>
+             </TABLE>
     </TD>
     </tr>
-
-<!--<tr><TD><img alt="SEC" src="gifs/sec.jpg" width=300></td></tr>
----------------------------------------------------------------------------------->
 <tr>
     <td> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 
