--- a/right.html
+++ b/right.html
@@ -37,25 +37,29 @@ mathematician Georgia Southern Statesboro mathematics math computer science stat
   <TBODY>
      <TR>
      <TD>
-                        <TABLE>
-                          <TBODY>
-                           <TR>
-                          <TD><FONT size=5>     <IMG alt=B src="gifs/B.gif">ruce
-                      </FONT></TD>
-                   <TD><FONT size=5><IMG title="" alt=McL
-                               src="gifs/McL.gif">ean </FONT></TD>
+        <TABLE>
+            <TBODY>
+                   <TR>
+                          <TD><FONT size=5>   
+                              <IMG alt=B src="gifs/B.gif">ruce
+                             </FONT>
+                          </TD>
+                            <TD>
+                             <FONT size=5><IMG title="" alt=McL
+                               src="gifs/McL.gif">ean 
+                              </FONT>
+                           </TD>
+                        <td>
+                                 <img src="gifs/uk-math.gif">
+                           </td>
+                                           
 
-                          <td><img src="gifs/uk-math.gif"></td>
-                             <td>
-<!-- <img src="Bridge/pics/No_Trump.jpg">
--->
-                             </td>
-                         </TR>
-                  </TBODY>
-             </TABLE>
+                    </TR>
+             </TBODY>
+          </TABLE>
     </TD>
     </tr>
-<tr>
+     <tr>
     <td> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 
        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  <IMG alt=GUS hspace=0
@@ -64,10 +68,10 @@ mathematician Georgia Southern Statesboro mathematics math computer science stat
     </tr>
 </TBODY>
  </TABLE>
-<!--IMG SRC="redblueuk.jpeg" --><!--img src="limp.GIF"-->
+<!- -IMG SRC="redblueuk.jpeg" --><!--img src="limp.GIF"-->
 
-<!--img src="boosters.jpeg"--><!--img src="photos/teammates1.JPG" width=250 height=170--></TD></TR></TBODY></TABLE>
-<!-- second row--><!--3rd row-->
+<! - -img src="boosters.jpeg"--><!--img src="photos/teammates1.JPG" width=250 height=170--></TD></TR></TBODY></TABLE>
+<! - - second row--><!--3rd row-->
 <Table>
 <tbody>
 <tr>
@@ -85,67 +89,52 @@ mathematician Georgia Southern Statesboro mathematics math computer science stat
 
 
      </TD>
-    <TD></TD>
-    </TR>
-
-    </TBODY>
-     </TABLE>
-</td><td></td></TR>
+   </TR>
 </tbody>
 </table>
 
 
-
+</td>
 
 
 <FONT size=4><BR>
 <TABLE>
   <TBODY>
   <TR>
-    <TD> <IMG src="gifs/C.gif">lasses
-    <UL><FONT size=4>
 
+    <TD>
 
+        <BR> <IMG src="gifs/C.gif">lasses
+  
+
+      <MENU>
 
 <LI>Retired as of 7/1/2014.</li>
 
-
-
-</UL>
+<BR>
 
        <IMG src="gifs/M.gif">athematics
-      <MENU>
-<!--
-<li><a href="http://mathdl.maa.org/mathDL/" target="_top">MathDL</a>
-<LI><a href="http://mathgateway.maa.org/" target="_top">Gateway</a>
-<li><a href="http://nsdl.org/" target="_top">National Science DL</a>
-        <li><a href="http://www.rose-hulman.edu/mathjournal/" target="top">
-Rose-Hulman </a> Undergraduate Mathematics Journal
+<MENU>
 
-<LI><A
-        href="http://genealogy.math.ndsu.nodak.edu/html/search.phtml"
- target="_top">Genealogy</a>
-   -->
    <LI>Carl Eberhart's <A
         href="http://www.ms.uky.edu/~carl/ma341/misc.html" target=_top>Calculus
         Page</A>.
 </LI>
-<li>Clickers for Calculus I. Drop me a line.
 
-</ul>
+</LI>
         <LI><A href="http://www-history.mcs.st-andrews.ac.uk/"
         target=_top>Mathematicians</A>.
-</ul>
+</LI>
 		        <LI><A href="http://genealogy.math.ndsu.nodak.edu/id.php?id=59863"
         target=_top>My Genealogy</A>.
-</ul>
+</LI>
         <LI>Women <A href="http://www.agnesscott.edu/lriddle/women/women.htm"
         target=_top>mathematicians</A>.
-</ul>
-        <LI>Famous <A
+</LI>
+   <LI>Famous <A
         href="http://www-groups.dcs.st-and.ac.uk/~history/Curves/Curves.html"
         target=_top>Curves</A>.
-</ul>
+</LI>
 <!--
         <LI>McLean's <A
         href="theorems.html">theorems</A>.
@@ -156,8 +145,9 @@ Rose-Hulman </a> Undergraduate Mathematics Journal
        <LI>Teaching <A
         href="http://www.mcrel.org/resources/links/math.asp">site</A>.
       </LI>
-
+  -->
     </MENU>
+
      <BR><IMG src="gifs/C.gif">omputer Science
 
       <MENU>
@@ -167,7 +157,9 @@ Rose-Hulman </a> Undergraduate Mathematics Journal
         target=_top>CSC1</A>.
       </LI>
 -->
-        </MENU><BR><IMG src="gifs/S.gif">tatistics
+        </MENU>
+        <BR>
+          <IMG src="gifs/S.gif">tatistics
 
       <MENU>
 <!--
@@ -268,56 +260,15 @@ Rose-Hulman </a> Undergraduate Mathematics Journal
 <IMG src="pics/Andrew1.JPG" width=390 length="590"><BR>Andrew
   <td>
 
-    <!--img src="redblueeag.jpeg"--
-  <IMG alt=Kentucky
-      src="gifs/uk-math.gif">
-
-
-
-                 <!--img src="brucemclean.jpeg"
-    </TD>
-    -->
+  
 </tr>
 
-         </TABLE>
-<!--img src="one_court.JPEG"--><!--img src="overwork.jpeg"-->
-<!--img src="GayleMcElrath.jpeg"--><!--img src="uk/padgett.jpeg"-->
-<!--img src="uk/bkm_uk_duke_turner.jpg"--><!--a href="at/at2.html"-->
-<!--img src="at1.GIF"--><!--img src="at/at6.GIF"-->
-<!--img src="pics/jack&sid99.jpg" width=235 height=170-->
-    <TABLE border=1>
-        <TBODY>
+         
+</TABLE>
+
+<BR><!--img src="bugleboy.jpeg" width=140 height =280-->
 
 
-     </TBODY></TABLE>
-<BR><!--img src="bugleboy.jpeg" width=140 height =280--></TD></TR></TBODY></TABLE>
-<TABLE>
-  <TBODY>
-  </TBODY></TABLE>
-<TABLE>
-  <TBODY>
-  <TR>
-    <TD></TR></TBODY></TABLE><!--
-
-
-
-<center>
-
-      <table border=3>
-               <td><A HREF=
-"http://www2.georgiasouthern.edu/athletics/athletic.htm">
-                   <img src="eagle_head_5.gif" ALT=GSU>
-                   </A>
-               </td>
-               <td>
-                  <img src="redblue.jpeg">
-               </td>
-               <td>
-
-                    <img src="biglogo.gif" ALT=UK>
-
-              </td>
-      </table>
 </center>
 --><A
 href="http://www.georgiasouthern.edu/" target=_top><IMG alt=GSU
@@ -329,20 +280,21 @@ Homepage.<!--img src= "/cgi-bin/Count.cgi?df=mac.dat"align=absmiddle--><!--img s
 <TABLE border=0>
   <TBODY>
   <TR>
-    <TD><BR></TD></TR>
+    <TD><BR></TD>
+    </TR>
   <TR>
     <TD>Please send your<A href="mailto:bmclean at GeorgiaSouthern dot edu">
-comments</A>. </TD></TR>
+comments</A>. 
+   </TD>
+   </TR>
   <TR>
     <TD><FONT size=4><FONT size=-3>Last updated ==&gt; 4/22/2020</FONT></FONT>
-    </TD></TR></TBODY></TABLE><!--! the information below must be on all personal pages. >
-<!--! Do NOT delete this disclaimer. --><FONT
-size=-3>The content of personal and other unofficial home pages is not
-sanctioned by Georgia Southern <a href="calculus/homework_uchida.html">University</a> and does not represent official
-information or opinions of the <a href="linearbaby/homework.html">University</a>. <A
-href="mailto:bmclean at GeorgiaSouthern dot edu">Bruce McLean</A> is solely <a href="http://roaminations.blogspot.com/">responsible</a>
-for this page. shot jan no<!--></FONT>
-<P><FONT size=4><FONT size=-3></FONT></FONT></P>
-<HR>
-<FONT size=4><FONT size=-3></FONT></FONT><!--a href="http://web.fie.com/htdoc/fed/dot/nht/any/proc/any/04219719.htm"-->
-<CENTER></CENTER></FONT></BODY></HTML>
+    </TD>
+  </TR>
+</TBODY>
+</TABLE>
+
+</CENTER>
+</FONT>
+</BODY>
+</HTML>
