--- a/right.html
+++ b/right.html
@@ -95,9 +95,11 @@ mathematician Georgia Southern Statesboro mathematics math computer science stat
 
 
 </td>
-
-
-<FONT size=4><BR>
+</TR>
+<TR>
+<
+     <TD>
+       FONT size=4><BR>
 <TABLE>
   <TBODY>
   <TR>
