--- a/right.html
+++ b/right.html
@@ -97,9 +97,9 @@ mathematician Georgia Southern Statesboro mathematics math computer science stat
 </td>
 </TR>
 <TR>
-<
+
      <TD>
-       FONT size=4><BR>
+       <FONT size=4><BR>
 <TABLE>
   <TBODY>
   <TR>
@@ -127,11 +127,8 @@ mathematician Georgia Southern Statesboro mathematics math computer science stat
         Page</A>.
 </LI>
 
-</LI>
-        <LI><A href="http://www-history.mcs.st-andrews.ac.uk/"
-        target=_top>Mathematicians</A>.
-</LI>
-		        <LI><A href="http://genealogy.math.ndsu.nodak.edu/id.php?id=59863"
+
+        <LI><A href="http://genealogy.math.ndsu.nodak.edu/id.php?id=59863"
         target=_top>My Genealogy</A>.
 </LI>
         <LI>Women <A href="http://www.agnesscott.edu/lriddle/women/women.htm"
@@ -226,7 +223,9 @@ mathematician Georgia Southern Statesboro mathematics math computer science stat
         </LI>
 -->
 <LI> Statesboro <a href="Bridge/bridgeindex.html">Pairs</a>
+</li>
 <LI> Statesboro <a href="racquetball/RAQindex.html">Racquetball</a>
+</LI>
 
 </menu>
 
@@ -266,7 +265,7 @@ mathematician Georgia Southern Statesboro mathematics math computer science stat
 <IMG src="pics/Andrew1.JPG" width=390 length="590"><BR>Andrew
   <td>
 -->
-  
+</td>  
 </tr>
 
          
@@ -282,7 +281,8 @@ src="gifs/left1.gif" align=middle homepage=""></A>Georgia Southern
 Homepage.<!--img src= "/cgi-bin/Count.cgi?df=mac.dat"align=absmiddle
 -->
 
-<!--img src= "/cgi-bin/Count.cgi?display=clock"align=absmiddle-->
+<!--img src= "/cgi-bin/Count.cgi?display=clock"align=absmiddle
+-->
 </FONT>
 <HR SIZE=2>
 <FONT size=4>
