final before quit

--- a/Bridge/bridgeindex.html
+++ b/Bridge/bridgeindex.html
@@ -20,13 +20,15 @@
   <tbody>
 <tr>
 
-<td><img src="../gifs/Spring/violets.jpg">/</td><td><H1>Statesboro Pairs<BR>is a duplicate bridge club. <br></td> <td><img src="../gifs/StPats/hatday.jpg"></td></tr>
+<td><img src="../gifs/Spring/violets.jpg">/</td><td><H1>Statesboro Pairs<BR>
+is a duplicate bridge club. <br></td> <td><img src="../gifs/Spring/spring.jpg"></td></tr>
 
 </tbody></table><BR>
 <H2><BR>
 </H2>
-</H1><font size=5> Starting in May,<BR>meet us every Tuesday night at 7:00 pm in the Episcopal Church 
+</H1><font size=5> After the virus, we will meet every Tuesday night at 7:00 pm<BR> in the Episcopal Church 
 on Veterans Parkway in Statesboro, Georgia. <BR>
+
 Check our <a href="NoScript/NoCode.html">index box</a>.
 <BR>Our President is Chuck Johnson. He can be reached at 489-3921.
 <p><Center>If you like bridge, you'll love duplicate. Come join us.<P>
@@ -1954,7 +1956,7 @@ Pairs 4 AND 8 defended correctly while <BR>Eller - Lantz defeated the contract.<
       </td>
 
 -->
-<td><H3><center> <img src="pics/mcleanb/bridge/cartoon3.jpg"><BR>This week's winners</center></h3><HR>
+<td><H3><center> <img src="pics/mcleanb/bridge/cartoon3.jpg"><BR>Most recent winners</center></h3><HR>
 <table>
 <tbody>
 <TR>
@@ -2019,8 +2021,6 @@ The next game is this Tuesday
 <!--
 <img src="pics/two.jpg"><img src="pics/three.jpg">
 <img src="pics/elpics/IMG_0407.JPG"><img src="pics/elpics/IMG_0406.JPG">
--->
-
 
 
 <img src="pics/elpics/IMG_0404.JPG">
@@ -2030,12 +2030,14 @@ The next game is this Tuesday
 
 
 
-<img src="pics/six.jpg"><img src="pics/five.jpg">
 
+<img src="pics/six.jpg">
+-->
+<img src="pics/five.jpg">
 
 
 <p></CENTER>
-updated on 4/15/2020
+updated on 4/24/2020
 
 
 </BODY>
