Announcing first game on BBO.

--- a/Bridge/bridgeindex.html
+++ b/Bridge/bridgeindex.html
@@ -10,7 +10,7 @@
 <!  -- email           bmclean@georgiasouthern.edu>
 <!  --Author:          Bruce McLean>
 <!  --Date Created:    6/20/2015>
-<!   --Lasst modified   . . . . . . . 4/15/2020>
+<!   --Lasst modified   . . . . . . . 4/28/2020>
 
 
 <META content="MSHTML 6.00.2800.1400" name=GENERATOR>
@@ -66,7 +66,7 @@ Check our <a href="NoScript/NoCode.html">index box</a>.
 <TD>
 <!-- 
                                    RECENT   RESULTS  -->
-8888888888
+
 <!-- 
                                    RECENT   RESULTS  -->
 
@@ -1994,14 +1994,18 @@ Duplicate <A href="Duplicate Bridge Basics.pdf">Basics</a>
 
 
 
-<hr>
 
 
-<h3> <img src="pics/mcleanb/bridge/director.jpg"><BR>
-The next game is this Tuesday
- starting at
-<br>7:00 on the dot. Be on time.
-<p>Please contact Chuck if you want to play.
+
+<h3> <img src="pics/mcleanb/bridge/director.jpg"><BR><hr>
+The next game is this Tuesday starting at
+<br>7:00 on the dot. Be on time. We are trying
+<BR> one table on BBO. Call Bruce if your 
+<BR>interested in  joining us next week.
+<BR>We will be playing against the others on BBO.
+<BR>It is free but you must have a partner.
+<p>My number is 678-6344
+<p>
 
 
 
@@ -2037,7 +2041,7 @@ The next game is this Tuesday
 
 
 <p></CENTER>
-updated on 4/24/2020
+updated on 4/28/2020
 
 
 </BODY>
