--- a/Bridge/bridgeindex.html
+++ b/Bridge/bridgeindex.html
@@ -10,7 +10,7 @@
 <!  -- email           bmclean@georgiasouthern.edu>
 <!  --Author:          Bruce McLean>
 <!  --Date Created:    6/20/2015>
-<!   --Lasst modified   . . . . . . . 4/28/2020>
+<!   --Lasst modified   . . . . . . . 5/2/2020>
 
 
 <META content="MSHTML 6.00.2800.1400" name=GENERATOR>
@@ -26,11 +26,15 @@ is a duplicate bridge club. <br></td> <td><img src="../gifs/Spring/spring.jpg"><
 </tbody></table><BR>
 <H2><BR>
 </H2>
-</H1><font size=5> After the virus, we will meet every Tuesday night at 7:00 pm<BR> in the Episcopal Church 
+</H1><font size=5> Our President is Chuck Johnson. He can be reached at 489-3921.<P>
+</font><font size = 4>We are meeting as usual, on-line, at 7:00 pm. Start your table for 2 or 4 players,  
+<BR>entering everyone's BBO login names. We are playing 18 boards. If you need help, call Chuck or Bruce.
+<p>After the virus, we will meet in the Episcopal Church 
 on Veterans Parkway in Statesboro, Georgia. <BR>
-
+<!--
 Check our <a href="NoScript/NoCode.html">index box</a>.
-<BR>Our President is Chuck Johnson. He can be reached at 489-3921.
+-->
+<BR>
 <p><Center>If you like bridge, you'll love duplicate. Come join us.<P>
 
  <img src="pics/mcleanb/bridge/dummy.jpg"></center><p>
@@ -71,6 +75,13 @@ Check our <a href="NoScript/NoCode.html">index box</a>.
                                    RECENT   RESULTS  -->
 
 <h3><Center> <img src="pics/mcleanb/bridge/peak.jpg"><BR>Recent results</center></h3><HR>
+<P>
+Statesboro Pairs Tuesday Eve Session March 10, 2020<BR>
+Scores after 21 boards  Average:   18.0   <BR>
+Pair    Pct   Score  Rank <BR>
+  7   69.44   25.00   1     1   <font size=5> Jean Johnson - Chuck Johnson</font><BR>
+  1   58.33   21.00   2     2   Andrea Leonardi - Jim Nichols<BR>
+  4   54.17   19.50   3     3   Jean James - Li Li<BR>
 
 <p>
 
@@ -1593,384 +1604,26 @@ Pair    Pct   Score  Rank   O/A>BR>
 
 11/1<BR>1 Ree and Verna<BR>
 2 Bruce and Andrea<P>
-<!--
-10/25<BR>1 Bruce and Andrea<BR>
-2 Paula and Mary<P>
-
-10/18<BR>1 Mary Miller and Paula Smith<BR>
-2-3 Chuck and Jean Johnson<br>2-3 Bruce and Andrea<P>
-
-10/11<BR>1 Mary Miller and Paula Smith<BR>
-2 Chuck and Jean Johnson<br>3 Ruth Ann and Jerry<P>
-
-
-9/27<BR>1 Mary Miller and Paula Smith<BR>
-2 Andrea Leonardi and Bruce McLean<br>
-3 Chuck and Jean Johnson<P>
-9/20 <BR>
-
-1/2 Bill Eller and Jane Sack<BR>
-1/2 Chuck and Jean Johnson<BR>
-3   Jim Nichols and Bruce McLean
-
-<p>9/13<br>
-1 Jane Sack and Bill Eller<br>
-2 Ree Bailey and Verna Hickman<br>
-3 Eleanor Schneider and Li Li<br>
-
-<P>9/6<br>
-Pair    Pct   Score  Rank  <BR>
-  2   60.00   24.00   1     1   Ree Bailey - Verna Hickman<BR>
-  1   53.75   21.50   2     2   Sue Smith - Li Li<BR>
-  4   52.50   21.00             Bill Eller - Jane Sack<BR>
-
-
-<p>8/30<br>Pair    Pct   Score  Rank  <BR>
-  2   70.00   28.00   1     1   Verna Hickman - Ree Bailey<BR>
-  1   55.00   22.00   2     2   Eleanor Schneider - Li Li<BR>
-  5   48.75   19.50   3     3   Mary Miller - Virginia Trapnell<BR>
-
-
-
-
-
-<p>8/23 <br>pair    Pct   Score  Rank  <br>
-  1   56.25   22.50   1     1   Bill Eller - Elaine Lantz<br>
-  3   51.25   20.50  2/3   2/3  Eleanor Schneider - Li Li<br>
-  5   51.25   20.50  2/3   2/3  Andrea Leonardi - Paula Smith<br>
-<p>8/16<br>Pair    Pct   Score  Rank   O/A<br>
-  5   59.72   21.50   1     1   Mary Miller - Paula Smith<br>
-  2   58.33   21.00   2     2   Ree Bailey - Verna Hickman<br>
-  7   56.94   20.50   3     3   Jean Johnson - Chuck Johnson<br>
-
-<p>8/9
-
-<P>8/2<br>
-Pair    Pct   Score  Rank   O/A<BR>
-
-  2   61.25   24.50   1     1   Ree Bailey - Verna Hickman<br>
-  3   58.75   23.50   2     2   Andrea Leonardi - Elaine Lantz<br>
-  1   55.00   22.00             Jean Johnson - Chuck Johnson<BR>!
-
-  <P>7/26<br>
-Pair    Pct   Score  Rank   O/A<BR>
-  5   60.00   24.00   1     1   Jean Johnson - Chuck Johnson<br>
-  1   56.25   22.50  2/3   2/3  Bill Eller - Jane Sack<br>
-  2   56.25   22.50  2/3   2/3  Ree Bailey - Verna Hickman<BR>
-
-
-<p>7/19<BR>
-Pair    Pct   Score  Rank   <br>
-  4   65.08   41.00   1     1   Mary Miller - Paula Smith <br>
-  3   62.70   39.50   2     2   Bill Eller - Jane Sack <br>
-  5   59.52   37.50   3     3   Sue Smith - Alice Budack <br>
-  2   52.38   33.00             Ree Bailey - Elaine Lantz <br>
-
-<p>7/12<BR>
-
-1   Mary Miller - Paula Smith<BR>
-2   Chuck Johnson - Jean Johnson<BR>
-3   Sue Smith - Bill Eller<BR>
-
-
-<p> 7/5/2016<br>? ? ?
-<p>6/28<BR>
-
-1   Mary Miller - Paula Smith<BR>
-2   Ree Bailey - Verna Hickman<BR>
-3   Eleanor Schneider - Li Li<BR>
-
-<p>6/21
-
-<br>game cancelled
-
-<p>6/14
-
-<br>1 Johnson and Johnson
-<br>2 Leonardi and McLean
-
-<P>6/7
-<BR>Pair    Pct   Score  Rank   O/A
-<BR>  1   59.72   21.50  1/2   1/2  Mary Miller - Paula Smith
-<BR>  5   59.72   21.50  1/2   1/2  Andrea Leonardi - Jim Nichols
-<BR>  2   58.33   21.00  3/4   3/4  Ree Bailey - Verna Hickman
-<BR>  6   58.33   21.00  3/4   3/4  Sue Smith - Eleanor Schneider
-
-<p>5/31
-
-<br>1 Leonardi and McLean
-<br>2 Bailey and Hickman
-
-<p>5/24
-<br>1   Ree Bailey - Verna Hickman
- <br>2   Andrea and Bill
-  <br>3 Becky Taylor - Claire Binford
-<p>5/17
-<br>1 Andrea and Elaine
-<br>2 Ree and Verna
-<br>3 Jane and Bill
-
-<p>5/10
-<br>1 Bill E. and Jane
-<br>2 Remind me
-<br>3 Ree and Verna
-
-<p>5/3
-<br>1 Eleanor and Sue
-<br>2 Bill Young and Alice
-<br>3 Ree and Verna
-<BR>4 Mary and Paula
-
-
-<p>4/26
-
-
-<p>4/19
-<br>1 Becky and Paula
-<br>2 Bill Young and Alice
-<br>3/4 Bill Eller and Mary
-<br>3/4 Ree and Verna
-<p>4/12
-
- <br>
-+ 1 Ree and Verna<br>
-  2 Andrea and Bruce<br>
-
-  3 Bill Young and Jane Sack<br>
-
-
-<p>4/5
-
- <br>
- 1 Ree and Verna<br>
-  2 Bill Young and Bryan<br>
-  3/4 Mary and Jim<br>
-  3/4 Chuck and Jean
-
-<p>3/29
-
- <br>
- 1 Andrea and Bruce<br>
-  2/3 Jane and Bill<br>2/3 Mary and Elaine
-
-
-+
-<p>3/22
-
- <br>
- 1 Sue Smith and Mary Miller<br>
-  2 Chuck and Jean<br>3 Ree and Verna
-
-<p>3/15
-
- <br>
- 1 Ree and Verna<br>
-  2 Bill Young and Bruce<br>3 Dick and Marty Mellet
-
-<p>3/1
-
- <br>
- 1 Ree and Verna<br>
-  2 Bill and Jane<br>3 Ruth Ann and Claire
-
-
-
-<p>1/12
-
- <br>
-  1   Chuck and Jean<br>
-  2  Bill and Jane<br>
-
-
-  <p>1/5
-
- <br>
-  1   Claire Binford - Ruth Ann Rogers<br>
-  2  Andrea Leonardi - Bruce McLean<br>
-  3 Bill Eller - Ree Bailey<p>
-12/15
-
- <br>
-  1   Chuck Johnson - Jean Johnson<br>
-  2   Jane Sack - Bill Eller<br>
-  3/4  Verna Hickman - Ree Bailey<br>
-  3/4  Andrea Leonardi - Bruce McLean<br>
-  5  Eleanor Schneider - Alice Budack<p>
-
-12/8 <a href="duplicate/151208ERECAP.TXT">results</a>
-<BR>1 Ree and Verna
-<br>2 Bruce and Andrea
-<br>3 Stella and Elaine
-<br>4 Bill E. and Jane
-<p>
-
-
-12/1 This is how I remember them.
-
-<br>1 Ree and Verna
-<BR>2 Dick and Marty
-<br>3 Jane and Bill E.
-<br>4 Andrea and Bruce
-
-<p>
-11/17<a href="duplicate/151117ERECAP.TXT">results</a>
-<br>1 Jane and Bill E.
-<br>2/3 Ree and Verna <-> Dick and Marty
-<br>4 Chuck and Jean
-
-<p>
-
-11/10 <a href="duplicate/151110ERECAP.TXT">results</a>
-<br>1 Andrea and Bruce
-<br>2 Ree and Jean
-<br>3 Bill Y. and Bill H.
-
-
-
-
-
-<P>
-
-
-11/3 <a href="151103ERECAP.TXT">results</a>
-
-
-<br>1 Bill Y. and Bill H.
-<br>2 Mary and Jean
-<br>3 Stella and Elaine
-
-
-
-
-<P>10/27
-
-<a href="151027ERECAP.TXT">results</a>
-
-
-<br>1 Jane and Bill E.
-<br>2 Jean and Chuck
-<br>3 Bill Y. and Bill H.
-<br>4 Andrea and Bruce
-
-<P>10/20
-results
-<br>1 Claire and Ruth Ann
-<br>2 Jane and Bill E.
-<br>3 Andrea and Bruce
-
-
-<P>10/13
-results
-<br>1 Chuck and Jean
-<br>2 Eleanor and Bruce
-<BR> 3 4 and 5 depend upon the algorithm used
-
-
-<P>10/6
-<a href="151006ERECAP.TXT">results</a>
-<br>1 Bill Eller and Jane Sack
-<br>2 Bill Young and Bruce McLean
-
-<br>3 Sue Smith and Eleanor Schneider
-
-
-<BR>
-
-
-<P>9/29
-<a href="150929ERECAP.TXT">results</a>
-<br>1 Sue and Claire
-<br>2 Ree and Verna
-
-<br>3 Bill and Bill
-
-
-
-<BR>
-
-
-<p>9/22
-<a href="150922E.TXT">results</a> and <a href="150922RECAP.TXT">recap</a>
-<br>1 Jane and Bill E.
-<br>2 Stella and Elaine<br>
-3 Ree and Verna
-<p>
-
-<p>9/15
-<a href="150915E.TXT">results</a>
-<br>1 Ree and Verna
-<br>2 Chuck and Jean<br>
-3 Sue and Alice
-<br>4 Bill E. and Andrea
-
-
-<p>9/8 <a href="150908E.TXT">results</a>
-<br>1 Andrea and Bruce
-<br>2 Jane and Bill E
-<br>3 Mary and Virginia
-
-<p>9/1 <a href="150901E.TXT">results</a>
-<br>1 Ree and Verna
-<br>2 Jane and Bill E
-<br>3 Dick and Marty
-<br>4 Mary and Jean<BR>
-
-</td>
-   <td>
-
-
-<center>* * * Some hands * * * <p>
-</h3> Let me know which ones you want to see</center>
-<font size=6><BR>Last month's board 5 is <A href="hands/s4.htm">here</a>.</font><BR>
-
-<P>Here is March 20 board <a href="hands/Board18_032018.htm">18</a>.
-What is interesting<br> is a heart lead keeps the contract to 3 NT. A spade <BR>lead permits 5.
-Pairs 4 AND 8 defended correctly while <BR>Eller - Lantz defeated the contract.</h3>
-<P>
-<p><table  cellpadding="2" cellspacing="2">
-  <tbody>
-<font size=4>
-<TR><td>
-
-
-
-<a href="duplicate/Hands_Jack/10_6/bridgehands_10_06_2015.html">10/6</a>	hands
-</td>
-
-<td>
-<a href="duplicate/bridgehands_9_29_2015.html">9/29</a>	hands
-</td>
-<td>
-<a href="bridgehands6_2_2015.html">6/2</a>	hands
-</td>
-
-<td>
-<a href="bridgehands6_23_2015.html">6/23</a>	hands
-</td>
-</tr>
-</tbody>
-</table>
-<p>
-<hr>
-<!********End of second column>
-      </td>
-
 -->
+</td><TD>
 <td><H3><center> <img src="pics/mcleanb/bridge/cartoon3.jpg"><BR>Most recent winners</center></h3><HR>
 <table>
 <tbody>
 <TR>
 <TD>
-
+<P<
+Statesboro Pairs Tuesday Eve Session April 28, 2020<BR>
+Scores after 18 boards  Average:   0.0 IMP  <BR>
+We don't have 2 of the scores, so let us know.
+<BR>Pairs 1 and 2 ended up in a statistical tie.<BR>
+We assume the others did as well.<BR>
+Pair    Pct   Score  Rank <BR><font size=5> 
+1 McLean and Schneider 1<BR>
+2 Li and James . . . . 1<BR>
+3 Johnson and Johnson  1<BR>
+4 Miller abd Eller . . 1<BR></font>
 <P>
 
-Statesboro Pairs Tuesday Eve Session March 10, 2020<BR>
-Scores after 21 boards  Average:   18.0   <BR>
-Pair    Pct   Score  Rank <BR>
-  7   69.44   25.00   1     1   <font size=5> Jean Johnson - Chuck Johnson</font><BR>
-  1   58.33   21.00   2     2   Andrea Leonardi - Jim Nichols<BR>
-  4   54.17   19.50   3     3   Jean James - Li Li<BR>
-<P>
 
 
 </h4>
@@ -1999,11 +1652,11 @@ Duplicate <A href="Duplicate Bridge Basics.pdf">Basics</a>
 
 <h3> <img src="pics/mcleanb/bridge/director.jpg"><BR><hr>
 The next game is this Tuesday starting at
-<br>7:00 on the dot. Be on time. We are trying
-<BR> one table on BBO. Call Bruce if your 
-<BR>interested in  joining us next week.
-<BR>We will be playing against the others on BBO.
-<BR>It is free but you must have a partner.
+<br>7:00 pm on the dot. Be on time.
+<BR> Call Bruce if your 
+interested in  joining us.
+<BR>We will be playing against our members and others on BBO.
+<BR>It is free.
 <p>My number is 678-6344
 <p>
 
@@ -2037,11 +1690,11 @@ The next game is this Tuesday starting at
 
 <img src="pics/six.jpg">
 -->
-<img src="pics/five.jpg">
+ . . . . <img src="pics/five.jpg">
 
 
 <p></CENTER>
-updated on 4/28/2020
+updated on 5/2/2020
 
 
 </BODY>
