2nd week virtual

--- a/Bridge/bridgeindex.html
+++ b/Bridge/bridgeindex.html
@@ -76,6 +76,21 @@ Check our <a href="NoScript/NoCode.html">index box</a>.
 
 <h3><Center> <img src="pics/mcleanb/bridge/peak.jpg"><BR>Recent results</center></h3><HR>
 <P>
+
+
+Statesboro Pairs Tuesday Eve Session April 28, 2020<BR>
+Scores after 18 boards  Average:  30.0 IMP  <BR>
+
+Pair    Score  Rank <BR>
+1 34.6 1<font size=5> McLean and Schneider</font><BR>
+2 33.9 2 Li and James <BR>
+3  . . . 3 Johnson and Johnson<BR>
+4 . . . 3 Miller abd Eller<BR>
+<BR>We don't have 2 of the scores, so let us know.
+
+<P>
+
+
 Statesboro Pairs Tuesday Eve Session March 10, 2020<BR>
 Scores after 21 boards  Average:   18.0   <BR>
 Pair    Pct   Score  Rank <BR>
@@ -145,17 +160,14 @@ Pair    Pct   Score  Rank<BR>
 <TD>
 <P>
 
-Statesboro Pairs Tuesday Eve Session April 28, 2020<BR>
-Scores after 18 boards  Average:  0.0 IMP  <BR>
+Statesboro Pairs Tuesday Eve Session May 5, 2020<BR>
+Scores after 18 boards  Average:  30.0 IMP  <BR>
 
-Pair    Pct   Score  Rank <BR><font size=5> 
-1 McLean and Schneider 1<BR>
-2 Li and James . . . . . . . . 1<BR>
-3 Johnson and Johnson . .  1<BR>
-4 Miller abd Eller . . . . . . 1<BR></font>
-<BR>We don't have 2 of the scores, so let us know.
-<BR>Pairs 1 and 2 ended up in a statistical tie.<BR>
-We assume the others did as well.<BR>
+Pair    Score  Rank <BR>
+
+2  29.2 1 <font size=5> Li and James</font><BR>
+1 26.1 2 McLean and Schneider <BR>
+
 <P>
 
 
