Added Schwab remove NYT and GA  Power

--- a/left.html
+++ b/left.html
@@ -65,6 +65,7 @@ Ali in <A href="AlisonDiary2016.html" target=_top>St. Joe's</A>.
 <TD><LI><A href="https://www.icloud.com/" target=_top>New email</A>
 </td>
 </TR>
+<!--
 <TR>
 <TD><LI><A href=
 "https://customerservice.southerncompany.com/NonSecure/LoginFrames.aspx?ReturnUrl=%2fMyAccount.aspx%3flogin%3dtrue&login=true" 
@@ -77,8 +78,7 @@ target=_top>GA Power</A>
  target=_top>NY Times</A>
 </td>
 </TR>
-
-<!--
+-->
  <TR>
 <TD><LI><A href="flex/index.html" target=_top>Flexagon</A>
 </td>
@@ -177,7 +177,7 @@ target=_top>ADP Cobra</a></li>
       </A></LI></TD>
 </tr>
 <TR>
-<TD><LI><A href="https://invest.ameritrade.com/grid/p/site?cid=INSCTALOGIN0218" target=_top>TD Ameritrade</A>
+<TD><LI><A href="https://www.schwab.com/client-home" target=_top>Ch Schwab</A>
 </li></td>
 </TR>
 
